--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       </header>
     </section>
   </main>
+	<script src="/js/vendor/paper-full.min.js"></script>
   <script src="/js/script.js"></script>
 </body>
 </html>
